--- a/main.css
+++ b/main.css
@@ -1,28 +1,28 @@
-.MA0.white > div,
-.MA0.white > div > div > div,
-.MA0.white a,
-.MA0.white div div::before {
+.regex> div,
+.regex > div > div > div,
+.regex a,
+.regex div div::before {
 background-image: url(https://media.giphy.com/media/U3qYN8S0j3bpK/giphy.gif);
 }
-.MA0,
-.MA0 * {
+.regex,
+.regex * {
   box-sizing: border-box;
 }
-.MA0 {
+.regex {
   text-align: center;
 }
-.MA0 > div,
-.MA0 > div > div > div {
+.regex > div,
+.regex > div > div > div {
   display: inline-block;
   margin-left: 25px;
 }
 
-.MA0 > div > div > div b {
+.regex > div > div > div b {
   display: block;
   height: 100%;
   margin-right: 20px;
 }
-.MA0 a {
+.regex a {
   display: block;
   background-clip: border-box;
   margin: 2px;
@@ -32,10 +32,10 @@ background-image: url(https://media.giphy.com/media/U3qYN8S0j3bpK/giphy.gif);
   transform: scale(0.8);
   transition: 0.3s;
 }
-.MA0 a:hover {
+.regex a:hover {
   transform: scale(1);
 }
-.miMA0 {
+.miregex {
   -webkit-background-clip: text; 
   -webkit-text-fill-color: transparent; 
   background-image: url(https://media.giphy.com/media/U3qYN8S0j3bpK/giphy.gif);
@@ -45,7 +45,7 @@ background-image: url(https://media.giphy.com/media/U3qYN8S0j3bpK/giphy.gif);
   font-size: 30px;
   transition: 0.5s;
 }
-.miMA0:hover {
+.miregex:hover {
   letter-spacing: 5px;
 }
 .imma{
@@ -64,3 +64,4 @@ background-image: url(https://media.giphy.com/media/U3qYN8S0j3bpK/giphy.gif);
 	opacity: 0.5;
 	transform: scale(1.1);
 }
+
