--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@ background-image: url(https://media.giphy.com/media/U3qYN8S0j3bpK/giphy.gif);
 
 .Nais{
 	opacity: 0.5;
-	transform: scale(0.9);
+	margin-bottom: 100px;
+	height: 250px;
 }
 
